--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+    <script src="../src/static/js/leaflet-src.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,6 +22,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      body {
+        padding-bottom: 30px;
+      }
+      h1, h2, p {
+        font-family: sans-serif;
+       
+      }
+      .leaflet-container {
+        height: 85vh;
+        width: auto;
+        margin: 0 auto;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
