--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,12 @@
         width: auto;
         margin: 0 auto;
       }
+      .link-props{
+        color: darkgrey;
+        font-size: 20px;
+        font-weight: 500;
+        margin: 5px;
+      }
     </style>
     <title>React App</title>
   </head>
